1999-09-08  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/camel-folder.c (camel_folder_has_uid_capability): 
	(camel_folder_get_message_uid): 
	(camel_folder_get_message_uid_by_number): 
	(camel_folder_get_message_by_uid): 
	(camel_folder_get_uid_list): 
	Documented UID methods.

	* tests/ui-tests/store_listing.c (close_all): 
	close all open folders and stores. (necessary
	for UID list saving ).

	* camel/providers/MH/mh-uid.c (mh_generate_uid_list): 
	fix: store UID list in CamelMHFolder object.

	* camel/providers/MH/camel-mh-folder.c (_open): 
	read or create UID list.
	(_close): save UID list.

1999-09-07  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/md5-utils.c (md5_get_digest_from_file): 
	correct parameter decl (const)

	* camel/md5-utils.h: typo.

	* camel/providers/MH/mh-uid.c 
	More work on UID stuff for MH.
	(mh_save_uid_list): 
	(mh_load_uid_list): 
	(mh_generate_uid_list): 
	new funcs. Manage on-disk uid list.
	
	* camel/providers/MH/mh-utils.c (mh_is_a_message_file): 
	Util routines live here now.

	* camel/md5-utils.c 
	Documented all funcs.
	
	(md5_get_digest_from_stream): 
	correct typo.
	(md5_get_digest_from_file): 
	same typo corrected.
	

	* camel/md5-utils.h : 
	raw routines are declared public now.
	Md5 use has to be versatile.

	* camel/providers/MH/mh-uid.c (mh_uid_get_for_file): 
	new func. Returns an UID for an MH message.
		
1999-09-06  bertrand  <Bertrand.Guiheneuf@aful.org>


	* camel/md5-utils.h:
	* camel/md5-utils.c:
	changed names to follow camel style.
	(md5_get_digest_from_stream): 
	new methods.
	(md5_get_digest_from_file): 
	new function : get file md5 signature. 
	To be used in providers code.

	* camel/md5-utils.c: imported md5 coding 
	routine from rpm. Compiles.
	

1999-09-05  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/camel-folder.c (camel_folder_has_uid_capability): 
	(camel_folder_get_message_uid): 
	(camel_folder_get_message_uid_by_number): 
	(camel_folder_get_message_by_uid): 