@@ -56,9 +56,8 @@ static gint _append_message (CamelFolder *folder, CamelMimeMessage *message);
 static const GList *_list_permanent_flags (CamelFolder *folder);
 static void _copy_message_to (CamelFolder *folder, CamelMimeMessage *message, CamelFolder *dest_folder);
 
-static gchar *_get_message_uid (CamelFolder *folder, CamelMimeMessage *message);
-static gchar *_get_message_uid_by_number (CamelFolder *folder, gint message_number);
-static CamelMimeMessage *_get_message_by_uid (CamelFolder *folder, gchar *uid);
+static const gchar *_get_message_uid (CamelFolder *folder, CamelMimeMessage *message);
+static CamelMimeMessage *_get_message_by_uid (CamelFolder *folder, const gchar *uid);
 static GList *_get_uid_list  (CamelFolder *folder);
 
 
@@ -97,7 +96,6 @@ camel_folder_class_init (CamelFolderClass *camel_folder_class)
 	camel_folder_class->list_permanent_flags = _list_permanent_flags;
 	camel_folder_class->copy_message_to;
 	camel_folder_class->get_message_uid = _get_message_uid;
-	camel_folder_class->get_message_uid_by_number = _get_message_uid_by_number;
 	camel_folder_class->get_message_by_uid = _get_message_by_uid;
 	camel_folder_class->get_uid_list = _get_uid_list;
 
@@ -1026,7 +1024,7 @@ camel_folder_has_uid_capability (CamelFolder *folder)
 
 
 
-static gchar *
+static const gchar *
 _get_message_uid (CamelFolder *folder, CamelMimeMessage *message)
 {
 	return NULL;
@@ -1044,7 +1042,7 @@ _get_message_uid (CamelFolder *folder, CamelMimeMessage *message)
  * 
  * Return value: The UID of the message in the folder
  **/
-gchar * 
+const gchar * 
 camel_folder_get_message_uid (CamelFolder *folder, CamelMimeMessage *message)
 {
 	if (!folder->has_uid_capability) return NULL;
@@ -1052,7 +1050,9 @@ camel_folder_get_message_uid (CamelFolder *folder, CamelMimeMessage *message)
 }
 
 
-static gchar *
+
+/* the next two func are left there temporarily */
+static const gchar *
 _get_message_uid_by_number (CamelFolder *folder, gint message_number)
 {
 	return NULL;
@@ -1070,16 +1070,16 @@ _get_message_uid_by_number (CamelFolder *folder, gint message_number)
  * 
  * Return value: 
  **/
-gchar * 
+const gchar * 
 camel_folder_get_message_uid_by_number (CamelFolder *folder, gint message_number)
 {
-	if (!folder->has_uid_capability) return NULL;
-	return CF_CLASS (folder)->get_message_uid_by_number (folder, message_number);
+	//if (!folder->has_uid_capability) return NULL;
+	//return CF_CLASS (folder)->get_message_uid_by_number (folder, message_number);
 }
 
 
 static CamelMimeMessage *
-_get_message_by_uid (CamelFolder *folder, gchar *uid)
+_get_message_by_uid (CamelFolder *folder, const gchar *uid)
 {
 	return NULL;
 }
@@ -1097,7 +1097,7 @@ _get_message_by_uid (CamelFolder *folder, gchar *uid)
  * Return value: Message corresponding to the UID
  **/
 CamelMimeMessage *
-camel_folder_get_message_by_uid  (CamelFolder *folder, gchar *uid)
+camel_folder_get_message_by_uid  (CamelFolder *folder, const gchar *uid)
 {
 	if (!folder->has_uid_capability) return NULL;
 	return CF_CLASS (folder)->get_message_by_uid (folder, uid);
