@@ -20,7 +20,7 @@
  * USA
  */
 
-#include "config.h"
+#include <config.h>
 #include "mh-utils.h"
 
 #include <sys/stat.h> 
