@@ -1,12 +1,20 @@
 1999-09-08  bertrand  <Bertrand.Guiheneuf@aful.org>
 
+	* camel/providers/MH/camel-mh-folder.c 
+	(_get_message_by_uid): impemented.
+
 	* camel/camel-folder.c (camel_folder_has_uid_capability): 
 	(camel_folder_get_message_uid): 
 	(camel_folder_get_message_uid_by_number): 
 	(camel_folder_get_message_by_uid): 
 	(camel_folder_get_uid_list): 
 	Documented UID methods.
-
+	(camel_folder_get_message_uid_by_number): 
+	const'ified uid.
+	(camel_folder_get_message_by_uid): idem
+	removed stupid camel_folder_get_message_uid_by_number
+	method.
+	
 	* tests/ui-tests/store_listing.c (close_all): 
 	close all open folders and stores. (necessary
 	for UID list saving ).
